--- a/melharfi-2d-game-engine-wiki-11-controls.html
+++ b/melharfi-2d-game-engine-wiki-11-controls.html
@@ -200,14 +200,14 @@ namespace _2dProject
                 <p><a href="melharfi-2d-game-engine-wiki-13-cryptography.html">13. Cryptography</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-14-show-hide.html">14. Show, Hide</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-15-igfx.html">15. Interface IGfx</a></p>
-                <p>16. Tag</p>
-                <p>17. Child</p>
-                <p>18. SpriteSheet</p>
-                <p>19. Converting color</p>
-                <p>20. AStar pathfinding</p>
-                <p>21. LidgrenNetwork</p>
-                <p>22. Drawing Surface</p>
-                <p>23. Flickering issue</p>
+                <p><a href="melharfi-2d-game-engine-wiki-16-tag.html">16. Tag</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-17-child.html">17. Child</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-18-sprite-sheet.html">18. Sprite Sheet</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-19-convertingColor.html">19. Converting color</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-20-astar.html">20. AStar pathfinding</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-21-astar.html">21. LidgrenNetwork</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-22-drawing-surface.html">22. Drawing Surface</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-23-flickering.html">23. Flickering issue</a></p>
               </div>
               <!----End Summary---->
             </div>
