--- a/melharfi-2d-game-engine-wiki-06-anim.html
+++ b/melharfi-2d-game-engine-wiki-06-anim.html
@@ -173,11 +173,12 @@ anim1.Ini(Manager.TypeGfx.Obj, "anim1");
 Manager manager = new Manager(this, "CORE_ENGINE");
 manager.Background = Color.Blue;
 Anim anim1 = new Anim(100, manager);
-anim1.AddCell("narutoStep1.png", 0, 100, 100);
-anim1.AddCell("narutoStep2.png", 1, 100, 100);
-anim1.AddCell("narutoStep3.png", 2, 100, 100);
-anim1.AddCell("narutoStep4.png", 3, 100, 100);
-anim1.Ini(Manager.TypeGfx.Object, "naruto", false);
+player.AddCell("narutoStep1.png", 0, 0, 0);
+player.AddCell("narutoStep2.png", 1, 0, 0);
+player.AddCell("narutoStep3.png", 2, 0, 0);
+player.AddCell("narutoStep4.png", 3, 0, 0);
+player.Ini(Manager.TypeGfx.Object, "naruto", false);
+player.Bmp.Point = new Point(100, 200);
 manager.ObjectLayer.Add(anim1);
 anim1.Start();
                         </code>
@@ -289,14 +290,14 @@ anim1.Reverse = true;
                 <p><a href="melharfi-2d-game-engine-wiki-13-cryptography.html">13. Cryptography</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-14-show-hide.html">14. Show, Hide</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-15-igfx.html">15. Interface IGfx</a></p>
-                <p>16. Tag</p>
-                <p>17. Child</p>
-                <p>18. SpriteSheet</p>
-                <p>19. Converting color</p>
-                <p>20. AStar pathfinding</p>
-                <p>21. LidgrenNetwork</p>
-                <p>22. Drawing Surface</p>
-                <p>23. Flickering issue</p>
+                <p><a href="melharfi-2d-game-engine-wiki-16-tag.html">16. Tag</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-17-child.html">17. Child</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-18-sprite-sheet.html">18. Sprite Sheet</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-19-convertingColor.html">19. Converting color</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-20-astar.html">20. AStar pathfinding</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-21-astar.html">21. LidgrenNetwork</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-22-drawing-surface.html">22. Drawing Surface</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-23-flickering.html">23. Flickering issue</a></p>
               </div>
               <!----End Summary---->
             </div>
