--- a/melharfi-2d-game-engine-wiki-17-child.html
+++ b/melharfi-2d-game-engine-wiki-17-child.html
@@ -86,25 +86,16 @@
                   </div>
                   <div class="repos-content-sub">
                     <p><a href="https://github.com/melharfi/MELHARFI-2D-Game-Engine" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a></p>
-                    <p><b><h3>10. Mouse events</h3></b></p>
-                    <p><b>Mouse Events</b></p>
-                    <p>Time to add some interactions with our objects.</p>
-                    <p>Each drawing class (Bmp,Anim,Rec,Txt) inherit from an <b>Interface</b> called IGfx, the particular job of this interface is to make all inherited classes got something in common, and guess what !! all those classes has same events and some stuff like Name, Tag, Visible, Z-Index but we are going to see only events right now</p>
-                    <p><li><b>MouseClic</b></li></p>
-                    <p><li><b>MouseDoubleClic</b></li></p>
-                    <p><li><b>MouseDown</b></li></p>
-                    <p><li><b>MouseUp</b></li></p>
-                    <p><li><b>MouseOver</b></li></p>
-                    <p><li><b>MouseMove</b></li></p>
-                    <p><li><b>MouseOut</b></li></p>
-                    <p>To bind an object to an event just follow your object name by <b>"".MouseClic +="</b> and then intellisense ask you if you want to auto generate a method using the "Tab" button.</p>
-                    <p><img src="repos/MELHARFI-2D-Game-Engine/assets/eventMouseClic.png"></p>
-                    <p><img src="repos/MELHARFI-2D-Game-Engine/assets/cloudClick.png"></p>
+                    <p><b><h3>17. Child</h3></b></p>
+                    <p>Child is the ability to add graphic object inside thatobject itself, as a picture inside a picture will be then superposed, and to illustrate this let's say that there's a Rectangle object as a <b>Conteiner or parent</b> and inside of it there is a bunch of items <b>Child</b> like some informations as the lifepoints and Shield.</p>
+                    <p>The good thing to store objects inside another object is that you don't worry about moving them one by one as you have to move only the parent and the others will be moved depending on their relative position of the parent like a player moving and it's name above hime move same time.</p>
+                    <p>Assuming this code.</p>
                     <p>
                       <pre>
                         <code class="csharp">
 using System;
 using System.Drawing;
+using System.Linq;
 using System.Windows.Forms;
 using MELHARFI.Manager;
 using MELHARFI.Manager.Gfx;
@@ -120,23 +111,66 @@ namespace _2dProject
             Manager manager = new Manager(this, "CORE_ENGINE");
             manager.Background = Color.Blue;
 
-            Bmp cloudPicture = new Bmp("cloud.png", new Point(0, 0), manager);
-            cloudPicture.MouseClic += CloudPicture_MouseClic;
-            manager.BackgroundLayer.Add(cloudPicture);
+            Anim player = new Anim(150, manager);
+            player.AddCell("narutoStep1.png", 0, 0, 0);
+            player.AddCell("narutoStep2.png", 1, 0, 0);
+            player.AddCell("narutoStep3.png", 2, 0, 0);
+            player.AddCell("narutoStep4.png", 3, 0, 0);
+            player.Ini(Manager.TypeGfx.Object, "naruto", false);
+            player.Bmp.Point = new Point(100, 200);
+            manager.ObjectLayer.Add(player);
+            player.PointOfParent = true;            // necessary to not depend on relativ position of offsets
+            
+            // new instance of stats class
+            Stats playerStats = new Stats();
+            playerStats.Name = "Naruto";
+            playerStats.LifePoints = 5;
 
+            // Link Stats instance to the Tag of the player
+            player.Tag = playerStats;
+
+            Txt playerName = new Txt(playerStats.Name, new Point(0, -40), "playerName", Manager.TypeGfx.Object, true, new Font("Verdana", 10, FontStyle.Bold), Brushes.Pink, manager);
+            player.Childs.Add(playerName);
+
+            Txt playerLifePoints = new Txt(playerStats.LifePoints.ToString(), new Point(0, -25), "playerLifePoints", Manager.TypeGfx.Object, true, new Font("Verdana", 10, FontStyle.Bold), Brushes.Pink, manager);
+            player.Childs.Add(playerLifePoints);
+
+            KeyDown += Form1_KeyDown;
+            KeyUp += Form1_KeyUp;
         }
 
-        private void CloudPicture_MouseClic(Bmp bmp, MouseEventArgs e)
+        private void Form1_KeyUp(object sender, KeyEventArgs e)
         {
-            MessageBox.Show("Cloud has been clicked");
+            Manager manager = Manager.Managers.First(f => f.Name == "CORE_ENGINE");
+            Anim player = manager.ObjectLayer.First(f => f.Name == "naruto") as Anim;
+
+            player.Stop();
+        }
+
+        private void Form1_KeyDown(object sender, KeyEventArgs e)
+        {
+            Manager manager = Manager.Managers.First(f => f.Name == "CORE_ENGINE");
+            Anim player = manager.ObjectLayer.First(f => f.Name == "naruto") as Anim;
+
+            if (player.AnimState == Anim.State.STOPED)
+                player.Start();
+
+            player.Point = new Point(player.Point.X + 5, player.Point.Y);
+        }
+
+        public class Stats
+        {
+            public string Name;
+            public int LifePoints;
         }
     }
 }
-                        </code>
-                      </pre>
-                    </p>
-                    <p><button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-11-controls.html'">Next Chapter 11. Controls and ControlLayer>></button></p>
+</code>
+</pre>
+</p>
 
+                    <p><img src="repos/MELHARFI-2D-Game-Engine/assets/narutoMoving.gif"></p>
+                    <p><button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-18-sprite-sheet.html'">Next Chapter 18. Sprite Sheet>></button></p>
                   </div>
                 </div>
               </div>
@@ -153,13 +187,13 @@ namespace _2dProject
                 <p><a href="melharfi-2d-game-engine-wiki-07-txt.html">07. Txt (Text)</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-08-fillpolygon.html">08. FillPolygon (shapes)</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-09-error.html">09. Error handling</a></p>
-                <p><b>>>10. Mouse events</b></p>
-                <p><a href="melharfi-2d-game-engine-wiki-10-controls.html">11. Controls and ControlLayer</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-12-remove-clear-fixedObjectLayer.html">12. Remove, Clear and FixedObjectLayer</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-13-cryptography.html">13. Cryptography</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-10-mouse-events.html">10. Mouse events</b></p>
+                <p><a href="melharfi-2d-game-engine-wiki-11-controls.html">11. Controls and ControlLayer</b></p>
+                <p><a href="melharfi-2d-game-engine-wiki-13-remove-clear-fixedObjectLayer.html">12. Remove,Clear and FixedObjectLayer</b></p>
+                <p><a href="melharfi-2d-game-engine-wiki-13-cryptography.html">13. Cryptography</a>></p>
                 <p><a href="melharfi-2d-game-engine-wiki-14-show-hide.html">14. Show, Hide</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-15-igfx.html">15. Interface IGfx</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-16-tag.html">16. Tag</a></p>
+                <p><b>>>16. Tag</b></p>
                 <p><a href="melharfi-2d-game-engine-wiki-17-child.html">17. Child</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-18-sprite-sheet.html">18. Sprite Sheet</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-19-convertingColor.html">19. Converting color</a></p>
