add converting-color page

--- a/melharfi-2d-game-engine-wiki-19-converting-color.html
+++ b/melharfi-2d-game-engine-wiki-19-converting-color.html
@@ -276,7 +276,7 @@ namespace _2dProject
                       </pre>
                     </p>
                     <p><img src="repos/MELHARFI-2D-Game-Engine/assets/coloredPart3.png"></p>
-                    <p>Now the pant is fully painted whith color gradient.</p>
+                    <p>Now the pant is fully painted with color gradient.</p>
                     <p><button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-20-astar.html'">Next Chapter 20. AStar Pathfinding>></button></p>
                   </div>
                 </div>
