add converting-color page

--- a/melharfi-2d-game-engine-wiki-19-converting-color.html
+++ b/melharfi-2d-game-engine-wiki-19-converting-color.html
@@ -143,7 +143,7 @@ namespace _2dProject
             // OldColor is the color to be replaced, you need to use a paint tool to pick the color value like photoshop
             naruto.NewColorMap[0].OldColor = Color.FromArgb(248, 144, 8);
 
-            // replacing the OldColor "red" by the color Blue
+            // replacing the OldColor by new ones
             naruto.NewColorMap[0].NewColor = Color.FromArgb(37, 97, 219);
 
             manager.ObjectLayer.Add(naruto);
@@ -200,7 +200,7 @@ namespace _2dProject
             naruto.NewColorMap[0].OldColor = Color.FromArgb(248, 144, 8);
             naruto.NewColorMap[1].OldColor = Color.FromArgb(192, 56, 0);
 
-            // replacing the OldColor "red" by the color Blue
+            // replacing the OldColor by new ones
             naruto.NewColorMap[0].NewColor = Color.FromArgb(37, 97, 219);
             naruto.NewColorMap[1].NewColor = Color.FromArgb(29, 73, 161);
 
@@ -260,7 +260,7 @@ namespace _2dProject
             naruto.NewColorMap[1].OldColor = Color.FromArgb(192, 56, 0);
             naruto.NewColorMap[2].OldColor = Color.FromArgb(128, 24, 0);
 
-            // replacing the OldColor "red" by the color Blue
+            // replacing the OldColor by new ones
             naruto.NewColorMap[0].NewColor = Color.FromArgb(37, 97, 219);
             naruto.NewColorMap[1].NewColor = Color.FromArgb(29, 73, 161);
             naruto.NewColorMap[2].NewColor = Color.FromArgb(14, 29, 59);
