--- a/melharfi-2d-game-engine-wiki-05-rec.html
+++ b/melharfi-2d-game-engine-wiki-05-rec.html
@@ -139,17 +139,17 @@ manager.BackgroundLayer.Add(box1);
                 <p><a href="melharfi-2d-game-engine-wiki-08-fillpolygon.html">08. FillPolygon (shapes)</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-09-error.html">09. Error handling</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-10-mouse-events.html">10. Mouse events</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-10-controls.html">11. Controls and ControlLayer</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-11-controls.html">11. Controls and ControlLayer</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-12-remove-clear-fixedObjectLayer.html">12. Remove, Clear and FixedObjectLayer</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-13-cryptography.html">13. Cryptography</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-14-show-hide.html">14. Show, Hide</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-15-igfx.html">15. Interface IGfx</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-16-tag.html">16. Tag</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-17-child.html">17. Child</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-17-childs.html">17. Childs</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-18-sprite-sheet.html">18. Sprite Sheet</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-19-converting-color.html">19. Converting color</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-20-astar.html">20. AStar pathfinding</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-21-astar.html">21. LidgrenNetwork</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-21-lidgren.html">21. LidgrenNetwork</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-22-drawing-surface.html">22. Drawing Surface</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-23-flickering.html">23. Flickering issue</a></p>
               </div>
