--- a/melharfi-2d-game-engine-wiki-01-initializing.html
+++ b/melharfi-2d-game-engine-wiki-01-initializing.html
@@ -218,7 +218,7 @@ manager.refreshTimer.Interval = Fps;
               <div class="col-md-2 skills-bar">
                 <p style="color: cadetblue; font-size: 20px;">Summary</p>
                 <p><a href="melharfi-2d-game-engine-wiki-description.html">Description</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-home.html">Home</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-description.html">Description</a></p>
                 <p><b>>>01. Initializing MELHARFI engine</b></p>
                 <p><a href="melharfi-2d-game-engine-wiki-02-superposition.html">02. Superposition and ZIndex</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-03-drawing-classes.html">03. Drawing classes</a></p>
