--- a/melharfi-2d-game-engine-wiki-02-superposition.html
+++ b/melharfi-2d-game-engine-wiki-02-superposition.html
@@ -145,7 +145,7 @@ cloud.Zindex = building.Zndex - 1;
               <!----Summary---->
               <div class="col-md-2 skills-bar">
                 <p style="color: cadetblue; font-size: 20px;">Summary</p>
-                <p><b>>>Home</b></p>
+                <p><a href="melharfi-2d-game-engine-wiki-description.html">Description</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-01-initializing.html">01. Initializing MELHARFI engine</a></p>
                 <p><b>>>02. Superposition and ZIndex</b></p>
                 <p><a href="melharfi-2d-game-engine-wiki-03-drawing-classes.html">03. Drawing classes</a></p>
