--- a/melharfi-2d-game-engine-wiki-description.html
+++ b/melharfi-2d-game-engine-wiki-description.html
@@ -181,7 +181,7 @@
               <!----Summary---->
               <div class="col-md-2 skills-bar">
                 <p style="color: cadetblue; font-size: 20px;">Summary</p>
-                <p><b>>>Home</b></p>
+                <p><b>>>Description</b></p>
                 <p><a href="melharfi-2d-game-engine-wiki-01-initializing.html">01. Initializing MELHARFI engine</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-02-superposition.html">02. Superposition and ZIndex</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-03-drawing-classes.html">03. Drawing classes</a></p>
