--- a/melharfi-2d-game-engine-wiki-14-show-hide.html
+++ b/melharfi-2d-game-engine-wiki-14-show-hide.html
@@ -139,8 +139,8 @@ manager.HideTopLayer(false);  // to show all top assets
                 <p><a href="melharfi-2d-game-engine-wiki-10-mouse-events.html">10. Mouse events</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-11-controls.html">11. Controls and ControlLayer</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-12-remove-clear-fixedObjectLayer.html">12. Remove,Clear and FixedObjectLayer</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-13-cryptography.html">13. Cryptography</a>></p>
-                <p>14. Show, Hide</a></p>
+                <p><a href="melharfi-2d-game-engine-wiki-13-cryptography.html">13. Cryptography</a></p>
+                <p><b>>>14. Show, Hide</b></p>
                 <p><a href="melharfi-2d-game-engine-wiki-15-igfx.html">15. Interface IGfx</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-16-tag.html">16. Tag</a></p>
                 <p><a href="melharfi-2d-game-engine-wiki-17-childs.html">17. Childs</a></p>
