--- a/melharfi-2d-game-engine-wiki-22-drawing-surface.html
+++ b/melharfi-2d-game-engine-wiki-22-drawing-surface.html
@@ -92,7 +92,7 @@
                     <p>In that case better to devide your game into different sections by using multi instance of Manager.</p>
                     <p>Assuming you draw a RPG game, probably you need a surface to draw your map and another section to draw a hud and another section for menu.</p>
                     <p>Since the placeholder is the main form itself we need a way to devide it into many peaces, you can then use panels, a <b>Content</b> panel, and a <b>Bottom</b> panel for hud and <b>Menu</b> panel inleft side.</p>
-                    <p><img id="myImg1" class="myImg" src="repos/MELHARFI-2D-Game-Engine/assets/hierarchieOfManager.png" alt="" onclick="ShowModalImage('myImg1')"></p>
+                    <p><img id="myImg1" class="myImg" src="repos/MELHARFI-2D-Game-Engine/assets/hiearchieOfManager.png" alt="" onclick="ShowModalImage('myImg1')" width="800" height="489"></p>
                     <p>
                       <pre>
                         <code class="csharp">
